Removed lighttpd. Now, the proxy server (and for client-development purpose) is ExpressJS. Added base structure of client app. Modified Sconstruct where we can specify, on which module do 'sconscripts'

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.sconsign.dblite
+
 build_web/
-client/lighttpd.develop
-client/lighttpd.log
+
+client/node_modules
+client/bower_components
+client/dist.dev
+client/dist.prod
