--- a/client/bower.json
+++ b/client/bower.json
@@ -6,16 +6,18 @@
   "dependencies": {
     "angular": "^1.6.0",
     "angular-animate": "^1.3.0",
-    "angular-route": "^1.5.8",
     "angular-translate": "^2.13.1",
     "angular-bootstrap": "^2.2.0",
     "bootstrap-css-only": "^3.3.7",
-    "angular-translate-loader-static-files": "^2.12.1"
+    "angular-translate-loader-static-files": "^2.12.1",
+    "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.2.23"
+    "angular-mocks": "^1.2.23",
+    "angular-ui-router": "1.0.0-alpha.1"
   },
   "resolutions": {
-    "angular": "^1.6.0"
+    "angular": "^1.6.0",
+    "angular-ui-router": "^1.0.3"
   }
 }
