--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "repository": "",
   "devDependencies": {
+    "angular-mocks": "^1.6.0",
     "body-parser": "^1.5.2",
     "bower": "^1.3.1",
     "del": "^1.1.1",
@@ -28,8 +29,11 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
     "http-proxy": "^1.16.2",
+    "jasmine-core": "^2.5.2",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.10",
+    "karma": "^0.10.10",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
     "karma-junit-reporter": "^0.2.2",
     "main-bower-files": "^2.5.0",
     "method-override": "^2.1.2",
