--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-messages": "^1.5.8",
+    "angular-sanitize": "^1.6.1",
     "angular-translate": "^2.13.1",
+    "angular-ui-bootstrap": "^2.4.0",
     "angular-ui-router": "1.0.0-beta.2",
     "bootstrap-css": "^3.0.0",
     "bootstrap-css-only": "^3.3.7",
     "mdi": "^1.7.22",
-    "phaser": "^2.6.2"
+    "phaser": "^2.6.2",
+    "ui-select": "^0.19.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.8",
